feat: add etag to skip already indexed documents
